--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -4,9 +4,22 @@
 
 body {
   color: $primary-color;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: $m-size;
   line-height: 1.6;
+  margin: 0;
+}
+
+a {
+  color: $primary-color;
+}
+
+a:visited {
+  color: $primary-color;
+}
+
+a:hover {
+  color: $secondary-color;
 }
 
 button {
