--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,10 +1,8 @@
 // Colors
-$primary-color: #050505;
-$secondary-color: #b3a447;
-$tertiary-color: #4d4d4d;
+$primary-color: #000000;
+$secondary-color: #d33257;
 // Spacing
-$s-size: 1.2rem;
-$m-size: 1.6rem;
-$l-size: 3.2rem;
-$xl-size: 4.8rem;
+$s-size: 1rem;
+$m-size: 1.2rem;
+$l-size: 2.6rem;
 $desktop-breakpoint: 45rem;
