--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,7 @@
+@import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
 @import "./base/settings";
 @import "./base/base";
-@import "./components/page-container";
+@import "./components/header";
+@import "./components/main";
+@import "./components/footer";
+@import "./components/post";
