Changed to weblog style

--- a/client/src/styles/base/_base.scss
+++ b/client/src/styles/base/_base.scss
@@ -4,9 +4,9 @@
 
 body {
   color: $primary-color;
-  font-family: "Roboto", sans-serif;
+  font-family: -apple-system, "BlinkMacSystemFont", "Roboto", sans-serif;
   font-size: $m-size;
-  line-height: 1.6;
+  line-height: 1.7;
   margin: 0;
 }
 
