--- a/client/src/styles/components/_post.scss
+++ b/client/src/styles/components/_post.scss
@@ -1,30 +1,17 @@
 .post-container {
-  align-items: flex-start;
-  display: flex;
-  flex-direction: column;
-  margin: $m-size 0;
+  margin-bottom: $m-size;
 }
 
-.post-container--title {
-  color: lighten($primary-color, 20%);
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-}
-
-.post-container:hover {
+.post-container h3:hover {
+  color: $secondary-color;
   cursor: pointer;
 }
 
-.post-container:hover .post-container--title p {
-  color: white;
-  background: lighten($secondary-color, 10%);
+.post-container time {
+  color: lighten($primary-color, 40%);
 }
 
-.post-container--title span {
-  color: lighten($primary-color, 70%);
-}
-
-.post-container--subtitle {
-  color: lighten($primary-color, 50%);
+.post-container time:hover {
+  color: $secondary-color;
+  cursor: pointer;
 }
